--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy docs to GitHub Pages
+name: Deploy tools to GitHub Pages
 
 on:
   push:
@@ -7,21 +7,22 @@ on:
 
 jobs:
   deploy:
-    name: Deploy docs to GitHub Pages
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: yarn
-
+          node-version: "lts/*"
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+          run_install: false
       - name: Install dependencies
         run: |
-          yarn install --frozen-lockfile
+          pnpm install --frozen-lockfile
       - name: Build website
         run: |
-          yarn run build
+          pnpm run build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
