--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,24 @@
 {
     "compilerOptions": {
-      "baseUrl": ".",
-      "inlineSourceMap": true,
-      "inlineSources": true,
-      "module": "ESNext",
-      "target": "ES6",
-      "allowJs": true,
-      "noImplicitAny": true,
-      "moduleResolution": "node",
-      "importHelpers": true,
-      "isolatedModules": true,
-      "esModuleInterop": true,
-      "lib": [
-        "DOM",
-        "ES5",
-        "ES6",
-        "ES7"
-      ]
+        "allowJs": true,
+        "baseUrl": ".",
+        "esModuleInterop": true,
+        "importHelpers": true,
+        "inlineSourceMap": true,
+        "inlineSources": true,
+        "isolatedModules": true,
+        "lib": [
+            "DOM",
+            "ES5",
+            "ES6",
+            "ES7"
+        ],
+        "module": "ESNext",
+        "moduleResolution": "node",
+        "noImplicitAny": true,
+        "target": "ES6"
     },
     "include": [
-      "**/*.ts"
+        "**/*.ts"
     ]
-  }
+}
