--- a/package.json
+++ b/package.json
@@ -21,12 +21,18 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^29.2.6",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.17.4",
+    "esbuild-svelte": "^0.7.3",
     "jest": "^29.3.1",
+    "sass": "^1.57.1",
+    "svelte": "^3.55.1",
+    "svelte-preprocess": "^5.0.1",
+    "svelte-preprocess-sass": "^2.0.1",
     "ts-jest": "^29.0.5",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
