--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,4 @@ node_modules
 coverage
 
 # Deliverable
-public/js/apiToSpreadsheet.js
-public/js/restApiToText.js
-public/js/chunk-*.js
+public/js/*
