--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
+    "plantuml-encoder": "^1.4.0",
     "pluralize": "^8.0.0",
     "util": "^0.12.5",
     "xlsx": "^0.18.5"
@@ -25,6 +26,7 @@
     "@types/jest": "^29.2.6",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
+    "@types/plantuml-encoder": "^1.4.0",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.17.4",
     "esbuild-svelte": "^0.7.3",
