--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
+    "jszip": "^3.10.1",
     "plantuml-encoder": "^1.4.0",
     "pluralize": "^8.0.0",
     "util": "^0.12.5",
