--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^29.2.6",
     "@types/js-yaml": "^4.0.5",
