--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   ],
   "scripts": {
     "dev": "node esbuild.config.mjs",
+    "generate": "node generate.mjs",
     "test": "jest --silent=false",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production"
   },
@@ -34,7 +35,10 @@
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.17.4",
     "esbuild-svelte": "^0.7.3",
+    "fs-extra": "^11.1.0",
+    "glob": "^8.1.0",
     "jest": "^29.3.1",
+    "object-hash": "^3.0.0",
     "sass": "^1.57.1",
     "svelte": "^3.55.1",
     "svelte-preprocess": "^5.0.1",
