api validation draft

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "@stoplight/spectral-core": "^1.16.1",
+    "@stoplight/spectral-functions": "^1.7.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^29.2.6",
     "@types/js-yaml": "^4.0.5",
