--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,9 @@ jobs:
       - name: Build website
         run: |
           pnpm run build
+      - name: Copy api examples
+        run: |
+          cp -r -f test/data/* inputApi
       - name: Generate api cache
         run: |
           pnpm run generate
