--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "svelte-preprocess-sass": "^2.0.1",
     "ts-jest": "^29.0.5",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "yargs": "^17.7.0"
   }
 }
