--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,13 +22,13 @@ jobs:
           pnpm install --frozen-lockfile
       - name: Build website
         run: |
-          pnpm run build -- --configFile="./config.yaml"
+          pnpm run build --configFile="./config.yaml"
       - name: Copy api examples
         run: |
           cp -r -f test/data/* inputApi
       - name: Generate api cache
         run: |
-          pnpm run generate -- --configFile="./config.yaml"
+          pnpm run generate --configFile="./config.yaml"
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
