--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "node esbuild.config.mjs",
     "generate": "node generate.mjs",
     "test": "jest --silent=false",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production"
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "config-schema":"typescript-json-schema src/build/BuildConfig.ts BuildConfig > src/build/config.schema.json"
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
@@ -48,6 +49,7 @@
     "ts-jest": "^29.0.5",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
+    "typescript-json-schema": "^0.55.0",
     "yargs": "^17.7.0"
   }
 }
