migrate build scripts to typescript

--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "version": "1.0.0",
   "license": "AGPL-3.0",
   "author": "marc0l92",
+  "type": "module",
   "keywords": [
     "Swagger",
     "OpenAPI",
     "API"
   ],
   "scripts": {
-    "dev": "node src/build/esbuild.config.mjs",
-    "generate": "node src/build/generate.mjs",
+    "dev": "ts-node-esm -P src/build/tsconfig.json src/build/esbuild.config.ts",
+    "generate": "ts-node-esm -P src/build/tsconfig.json src/build/generate.ts",
     "test": "jest --silent=false",
-    "build": "tsc -noEmit -skipLibCheck && node src/build/esbuild.config.mjs production",
+    "build": "tsc -noEmit -skipLibCheck && ts-node-esm -P src/build/tsconfig.json src/build/esbuild.config.ts production",
     "config-schema": "typescript-json-schema --required src/build/BuildConfig.ts BuildConfig > src/build/config.schema.json"
   },
   "dependencies": {
@@ -30,11 +31,14 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@stoplight/spectral-cli": "^6.6.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.2.6",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
+    "@types/object-hash": "^3.0.2",
     "@types/plantuml-encoder": "^1.4.0",
     "@types/swagger-ui": "^3.52.0",
+    "@types/yargs": "^17.0.22",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.17.4",
     "esbuild-svelte": "^0.7.3",
@@ -47,6 +51,8 @@
     "svelte-preprocess": "^5.0.1",
     "svelte-preprocess-sass": "^2.0.1",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
     "typescript-json-schema": "^0.55.0",
