--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@stoplight/spectral-cli": "^6.6.0",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/jest": "^29.2.6",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.11.18",
+    "@types/object-hash": "^3.0.2",
     "@types/plantuml-encoder": "^1.4.0",
     "@types/swagger-ui": "^3.52.0",
+    "@types/yargs": "^17.0.22",
     "builtin-modules": "^3.3.0",
     "esbuild": "^0.17.4",
     "esbuild-svelte": "^0.7.3",
@@ -47,6 +50,8 @@
     "svelte-preprocess": "^5.0.1",
     "svelte-preprocess-sass": "^2.0.1",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4",
     "typescript-json-schema": "^0.55.0",
