--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "API"
   ],
   "scripts": {
-    "dev": "ts-node-esm -P src/build/tsconfig.json src/build/esbuild.config.ts",
-    "generate": "ts-node-esm -P src/build/tsconfig.json src/build/generate.ts",
+    "dev": "node src/build/esbuild.config.mjs",
+    "generate": "node src/build/generate.mjs",
     "test": "jest --silent=false",
-    "build": "tsc -noEmit -skipLibCheck && ts-node-esm -P src/build/tsconfig.json src/build/esbuild.config.ts production",
+    "build": "tsc -noEmit -skipLibCheck && node src/build/esbuild.config.mjs production",
     "config-schema": "typescript-json-schema --required src/build/BuildConfig.ts BuildConfig > src/build/config.schema.json"
   },
   "dependencies": {
