--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
     "allowServerChange": true
   },
   "validation": {
+    "enable": true,
     "spectralRulesFile": ".spectral.yaml"
   },
   "home": {
